feat: fully converted over to use Vite 4.x

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-md",
   "type": "module",
-  "version": "0.20.6",
+  "version": "0.20.7",
   "packageManager": "pnpm@7.5.2",
   "description": "Markdown for Vite",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
@@ -47,49 +47,41 @@
     "test:update": "vitest -u",
     "test:component": "npx cypress open-ct -p 4000"
   },
-  "peerDependencies": {},
   "dependencies": {
-    "@yankeeinlondon/builder-api": "*",
-    "@yankeeinlondon/happy-wrapper": "^2.6.0",
+    "@yankeeinlondon/builder-api": "^1.2.0",
+    "@yankeeinlondon/happy-wrapper": "^2.10.1",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "source-map-js": "^1.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.26.2",
-    "@antfu/ni": "^0.17.2",
-    "@antfu/utils": "^0.5.2",
-    "@rollup/pluginutils": "^4.2.1",
+    "@antfu/eslint-config": "^0.26.3",
+    "@antfu/ni": "^0.18.8",
+    "@antfu/utils": "^0.7.2",
     "@type-challenges/utils": "^0.1.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "16",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vitest/ui": "^0.22.1",
-    "@vue/runtime-core": "^3.2.38",
-    "@vue/test-utils": "^2.0.2",
-    "@vueuse/core": "^9.1.1",
+    "@types/node": "^16.18.8",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/ui": "^0.25.7",
+    "@vue/test-utils": "^2.2.6",
+    "@vueuse/core": "^9.6.0",
     "bumpp": "^8.2.1",
     "c8": "^7.12.0",
     "callsites": "^4.0.0",
-    "eslint": "^8.23.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
-    "fp-ts": "^2.12.2",
-    "happy-dom": "^6.0.4",
+    "fp-ts": "^2.13.1",
+    "happy-dom": "^8.1.0",
     "npm-run-all": "^4.1.5",
-    "pathe": "^0.3.5",
-    "rollup": "^2.78.1",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vitest": "^0.22.1",
-    "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
-  },
-  "pnpm": {
-    "overrides": {
-      "undici@<=5.8.1": ">=5.8.2"
-    }
+    "pathe": "^1.0.0",
+    "rollup": "^3.7.3",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.1",
+    "vitest": "^0.25.7",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   }
 }
