--- a/example/package.json
+++ b/example/package.json
@@ -8,25 +8,25 @@
   "dependencies": {
     "@vueuse/core": "^9.6.0",
     "@vueuse/head": "^1.0.22",
-    "@yankeeinlondon/code-builder": "^1.1.5",
-    "@yankeeinlondon/link-builder": "^1.1.6",
-    "@yankeeinlondon/meta-builder": "^1.1.5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@iconify/json": "^2.1.151",
     "@unocss/preset-wind": "^0.47.6",
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@yankeeinlondon/code-builder": "^1.2.0",
     "@yankeeinlondon/happy-wrapper": "^2.10.1",
+    "@yankeeinlondon/link-builder": "^1.2.0",
+    "@yankeeinlondon/meta-builder": "^1.2.0",
     "cross-env": "^7.0.3",
     "typescript": "^4.9.4",
     "unocss": "^0.47.6",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^3.2.5",
+    "vite": "^4.0.1",
     "vite-plugin-inspect": "^0.7.10",
-    "vite-plugin-md": "workspace:*",
+    "vite-plugin-md": "link:..",
     "vite-plugin-pages": "^0.28.0",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-ssg": "^0.22.1",
