test: added tests with "tsc" and "node" to ensure transpiled code is working versus just TS code

--- a/example/package.json
+++ b/example/package.json
@@ -12,13 +12,13 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.151",
+    "@iconify/json": "^2.1.152",
     "@unocss/preset-wind": "^0.47.6",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@yankeeinlondon/code-builder": "^1.2.0",
+    "@yankeeinlondon/code-builder": "^1.2.1",
     "@yankeeinlondon/happy-wrapper": "^2.10.1",
-    "@yankeeinlondon/link-builder": "^1.2.0",
-    "@yankeeinlondon/meta-builder": "^1.2.0",
+    "@yankeeinlondon/link-builder": "^1.2.1",
+    "@yankeeinlondon/meta-builder": "^1.2.1",
     "cross-env": "^7.0.3",
     "typescript": "^4.9.4",
     "unocss": "^0.47.6",
@@ -26,7 +26,7 @@
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.1",
     "vite-plugin-inspect": "^0.7.10",
-    "vite-plugin-md": "0.21.0",
+    "vite-plugin-md": "workspace:..",
     "vite-plugin-pages": "^0.28.0",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-ssg": "^0.22.1",
