--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "source-map-js": "^1.0.2"
   },
   "peerDependencies": {
-    "vite": "^4.0.0"
+    "vite": "^4.0.0 || ^3.0.0",
+    "@vitejs/plugin-vue": "^2.3.4 -> ^4.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
