--- a/package.json
+++ b/package.json
@@ -55,15 +55,15 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "dependencies": {
-    "@yankeeinlondon/builder-api": "^1.2.2",
+    "@yankeeinlondon/builder-api": "^1.3.4",
     "@yankeeinlondon/gray-matter": "^6.1.1",
     "@yankeeinlondon/happy-wrapper": "^2.10.1",
     "markdown-it": "^13.0.1",
     "source-map-js": "^1.0.2"
   },
   "peerDependencies": {
-    "vite": "^4.0.0 || ^3.0.0",
-    "@vitejs/plugin-vue": ">=2.3.4"
+    "@vitejs/plugin-vue": ">=2.3.4",
+    "vite": "^4.0.0 || ^3.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
@@ -78,7 +78,7 @@
     "@vitest/coverage-c8": "^0.25.8",
     "@vitest/ui": "^0.25.8",
     "@vue/test-utils": "^2.2.6",
-    "@vueuse/core": "^9.6.0",
+    "@vueuse/core": "^9.7.0",
     "@yankeeinlondon/code-builder": "^1.2.1",
     "@yankeeinlondon/link-builder": "^1.2.1",
     "@yankeeinlondon/meta-builder": "^1.2.1",
@@ -89,6 +89,7 @@
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.13.1",
     "happy-dom": "^8.1.0",
+    "native-dash": "^1.25.0",
     "npm-run-all": "^4.1.5",
     "pathe": "^1.0.0",
     "rollup": "^3.7.4",
