--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "dependencies": {
-    "@yankeeinlondon/builder-api": "^1.3.4",
+    "@yankeeinlondon/builder-api": "^1.4.1",
     "@yankeeinlondon/gray-matter": "^6.1.1",
     "@yankeeinlondon/happy-wrapper": "^2.10.1",
+    "@yankeeinlondon/meta-builder": "^1.4.0",
+    "inferred-types": "^0.37.6",
     "markdown-it": "^13.0.1",
     "source-map-js": "^1.0.2"
   },
@@ -71,7 +73,7 @@
     "@antfu/utils": "^0.7.2",
     "@type-challenges/utils": "^0.1.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^16.18.9",
+    "@types/node": "^16.18.10",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -81,11 +83,10 @@
     "@vueuse/core": "^9.7.0",
     "@yankeeinlondon/code-builder": "^1.2.1",
     "@yankeeinlondon/link-builder": "^1.2.1",
-    "@yankeeinlondon/meta-builder": "^1.2.1",
     "bumpp": "^8.2.1",
     "c8": "^7.12.0",
     "callsites": "^4.0.0",
-    "eslint": "^8.29.0",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.13.1",
     "happy-dom": "^8.1.0",
