--- a/example/package.json
+++ b/example/package.json
@@ -1,35 +1,36 @@
 {
   "private": true,
   "packageManager": "pnpm@7.5.2",
+  "type": "module",
   "scripts": {
     "build": "cross-env DEBUG=vite-plugin-md:* vite build",
     "dev": "cross-env DEBUG=vite-plugin-md:* vite"
   },
   "dependencies": {
-    "@vueuse/core": "^9.6.0",
+    "@vueuse/core": "^9.7.0",
     "@vueuse/head": "^1.0.22",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.152",
+    "@iconify/json": "^2.1.154",
     "@unocss/preset-wind": "^0.47.6",
     "@vitejs/plugin-vue": "^4.0.0",
     "@yankeeinlondon/code-builder": "^1.2.1",
     "@yankeeinlondon/happy-wrapper": "^2.10.1",
     "@yankeeinlondon/link-builder": "^1.2.1",
-    "@yankeeinlondon/meta-builder": "^1.2.1",
+    "@yankeeinlondon/meta-builder": "^1.4.0",
     "cross-env": "^7.0.3",
     "typescript": "^4.9.4",
     "unocss": "^0.47.6",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.1",
-    "vite-plugin-inspect": "^0.7.10",
-    "vite-plugin-md": "workspace:..",
+    "vite": "^4.0.2",
+    "vite-plugin-inspect": "^0.7.11",
+    "vite-plugin-md": "workspace:^0.22.5",
     "vite-plugin-pages": "^0.28.0",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-ssg": "^0.22.1",
-    "vue-tsc": "^1.0.13"
+    "vue-tsc": "^1.0.14"
   }
 }
