--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
     "vite": "^4.0.1",
+    "vite-plugin-md": "link: ..",
     "vitest": "^0.25.8",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
