chore: mild adjustments prior to bringing in builders

--- a/package.json
+++ b/package.json
@@ -57,49 +57,47 @@
   "dependencies": {
     "@yankeeinlondon/builder-api": "^1.4.1",
     "@yankeeinlondon/gray-matter": "^6.1.1",
-    "@yankeeinlondon/happy-wrapper": "^2.10.1",
+    "@yankeeinlondon/happy-wrapper": "^3.1.0",
     "@yankeeinlondon/meta-builder": "^1.4.0",
     "inferred-types": "^0.37.6",
-    "markdown-it": "^13.0.1",
+    "markdown-it": "^13.0.2",
     "source-map-js": "^1.0.2"
   },
   "peerDependencies": {
     "@vitejs/plugin-vue": ">=2.3.4",
-    "vite": "^4.0.0 || ^3.0.0"
+    "vite": "^5.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.34.0",
-    "@antfu/ni": "^0.18.8",
-    "@antfu/utils": "^0.7.2",
+    "@antfu/eslint-config": "^2.1.0",
+    "@antfu/ni": "^0.21.10",
+    "@antfu/utils": "^0.7.6",
     "@type-challenges/utils": "^0.1.1",
-    "@types/markdown-it": "^12.2.3",
-    "@types/node": "^16.18.10",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitest/coverage-c8": "^0.25.8",
-    "@vitest/ui": "^0.25.8",
-    "@vue/test-utils": "^2.2.6",
-    "@vueuse/core": "^9.7.0",
+    "@types/markdown-it": "^13.0.7",
+    "@types/node": "20",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
+    "@vue/test-utils": "^2.4.2",
+    "@vueuse/core": "^10.6.1",
     "@yankeeinlondon/code-builder": "^1.2.1",
     "@yankeeinlondon/link-builder": "^1.2.1",
-    "bumpp": "^8.2.1",
-    "c8": "^7.12.0",
-    "callsites": "^4.0.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "fp-ts": "^2.13.1",
-    "happy-dom": "^8.1.0",
+    "bumpp": "^9.2.0",
+    "callsites": "^4.1.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "fp-ts": "^2.16.1",
+    "happy-dom": "^12.10.3",
     "native-dash": "^1.25.0",
     "npm-run-all": "^4.1.5",
-    "pathe": "^1.0.0",
-    "rollup": "^3.7.4",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.1",
-    "vite-plugin-md": "link: ..",
-    "vitest": "^0.25.8",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "pathe": "^1.1.1",
+    "rollup": "^4.5.2",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
+    "vitest": "^0.34.6",
+    "vue": "^3.3.9",
+    "vue-router": "^4.2.5"
   }
 }
